fix: Further align P2 score box with P1
- Adjust #p2Wrapper from 1220px to 1218px
- Adjust #p2Score from 1580px to 1582px
- Score BG boxes now symmetric (1.54px gap on both sides)

--- a/_overlays/css/style.scss
+++ b/_overlays/css/style.scss
@@ -47,7 +47,7 @@ body {
   }
 
   #p2Wrapper {
-    left: 1220px;
+    left: 1218px;
   }
 
   .scores {
@@ -67,7 +67,7 @@ body {
   }
 
   #p2Score {
-    left: 1580px;
+    left: 1582px;
   }
 
   #round {
